add test for the training

--- a/poc_classification_stackoverflow.ipynb
+++ b/poc_classification_stackoverflow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "4         How to read tags out of m4a files in .NET?  "
       ]
      },
-     "execution_count": 124,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,101 +332,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>post_id</th>\n",
-       "      <th>tag_name</th>\n",
-       "      <th>tag_id</th>\n",
-       "      <th>tag_position</th>\n",
-       "      <th>title</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1987528</td>\n",
-       "      <td>php</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Is it possible to execute the procedure of a f...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1987531</td>\n",
-       "      <td>ruby-on-rails</td>\n",
-       "      <td>4984</td>\n",
-       "      <td>0</td>\n",
-       "      <td>ruby on rails: how to change BG color of optio...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1987538</td>\n",
-       "      <td>c#</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>How to read tags out of m4a files in .NET?</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1987541</td>\n",
-       "      <td>c#</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Cannot marshal a struct that contains a union</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>1987542</td>\n",
-       "      <td>sed</td>\n",
-       "      <td>5282</td>\n",
-       "      <td>0</td>\n",
-       "      <td>libSVM automated labeller script</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    post_id       tag_name  tag_id  tag_position  \\\n",
-       "0   1987528            php       5             0   \n",
-       "1   1987531  ruby-on-rails    4984             0   \n",
-       "4   1987538             c#       9             0   \n",
-       "7   1987541             c#       9             0   \n",
-       "10  1987542            sed    5282             0   \n",
-       "\n",
-       "                                                title  \n",
-       "0   Is it possible to execute the procedure of a f...  \n",
-       "1   ruby on rails: how to change BG color of optio...  \n",
-       "4          How to read tags out of m4a files in .NET?  \n",
-       "7       Cannot marshal a struct that contains a union  \n",
-       "10                   libSVM automated labeller script  "
-      ]
-     },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\cham\\Desktop\\5A\\from poc to prod\\poc-to-prod-capstone\\poc_classification_stackoverflow.ipynb Cellule 9\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/cham/Desktop/5A/from%20poc%20to%20prod/poc-to-prod-capstone/poc_classification_stackoverflow.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m data_filter \u001b[39m=\u001b[39m data\u001b[39m.\u001b[39mloc[data\u001b[39m.\u001b[39mtag_position\u001b[39m==\u001b[39m\u001b[39m0\u001b[39m]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/cham/Desktop/5A/from%20poc%20to%20prod/poc-to-prod-capstone/poc_classification_stackoverflow.ipynb#X11sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m data_filter\u001b[39m.\u001b[39mhead()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
     }
    ],
    "source": [
@@ -474,164 +392,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>post_id</th>\n",
-       "      <th>tag_name</th>\n",
-       "      <th>tag_id</th>\n",
-       "      <th>tag_position</th>\n",
-       "      <th>title</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1987528</td>\n",
-       "      <td>php</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Is it possible to execute the procedure of a f...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1987531</td>\n",
-       "      <td>ruby-on-rails</td>\n",
-       "      <td>4984</td>\n",
-       "      <td>0</td>\n",
-       "      <td>ruby on rails: how to change BG color of optio...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1987538</td>\n",
-       "      <td>c#</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>How to read tags out of m4a files in .NET?</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1987538</td>\n",
-       "      <td>.net</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>How to read tags out of m4a files in .NET?</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1987541</td>\n",
-       "      <td>c#</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Cannot marshal a struct that contains a union</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9988</th>\n",
-       "      <td>2008021</td>\n",
-       "      <td>mysql</td>\n",
-       "      <td>21</td>\n",
-       "      <td>1</td>\n",
-       "      <td>PHP - Doctrine ORM not able to handle bit(1) t...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9993</th>\n",
-       "      <td>2008036</td>\n",
-       "      <td>c#</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>What could cause my WCF to throw strange Socke...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9994</th>\n",
-       "      <td>2008036</td>\n",
-       "      <td>.net</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>What could cause my WCF to throw strange Socke...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9996</th>\n",
-       "      <td>2008038</td>\n",
-       "      <td>.net</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Catch a C Runtime Library fatal error in (mixe...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9997</th>\n",
-       "      <td>2008043</td>\n",
-       "      <td>java</td>\n",
-       "      <td>17</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Xstream: removing class attribute</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3849 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      post_id       tag_name  tag_id  tag_position  \\\n",
-       "0     1987528            php       5             0   \n",
-       "1     1987531  ruby-on-rails    4984             0   \n",
-       "4     1987538             c#       9             0   \n",
-       "5     1987538           .net       1             1   \n",
-       "7     1987541             c#       9             0   \n",
-       "...       ...            ...     ...           ...   \n",
-       "9988  2008021          mysql      21             1   \n",
-       "9993  2008036             c#       9             0   \n",
-       "9994  2008036           .net       1             1   \n",
-       "9996  2008038           .net       1             0   \n",
-       "9997  2008043           java      17             0   \n",
-       "\n",
-       "                                                  title  \n",
-       "0     Is it possible to execute the procedure of a f...  \n",
-       "1     ruby on rails: how to change BG color of optio...  \n",
-       "4            How to read tags out of m4a files in .NET?  \n",
-       "5            How to read tags out of m4a files in .NET?  \n",
-       "7         Cannot marshal a struct that contains a union  \n",
-       "...                                                 ...  \n",
-       "9988  PHP - Doctrine ORM not able to handle bit(1) t...  \n",
-       "9993  What could cause my WCF to throw strange Socke...  \n",
-       "9994  What could cause my WCF to throw strange Socke...  \n",
-       "9996  Catch a C Runtime Library fatal error in (mixe...  \n",
-       "9997                  Xstream: removing class attribute  \n",
-       "\n",
-       "[3849 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 132,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\cham\\Desktop\\5A\\from poc to prod\\poc-to-prod-capstone\\poc_classification_stackoverflow.ipynb Cellule 12\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/cham/Desktop/5A/from%20poc%20to%20prod/poc-to-prod-capstone/poc_classification_stackoverflow.ipynb#X14sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m data_filter\u001b[39m=\u001b[39m data\u001b[39m.\u001b[39mgroupby([\u001b[39m\"\u001b[39m\u001b[39mtag_name\u001b[39m\u001b[39m\"\u001b[39m])\u001b[39m.\u001b[39mfilter(\u001b[39mlambda\u001b[39;00m x: \u001b[39mlen\u001b[39m(x) \u001b[39m>\u001b[39m \u001b[39m100\u001b[39m )\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/cham/Desktop/5A/from%20poc%20to%20prod/poc-to-prod-capstone/poc_classification_stackoverflow.ipynb#X14sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m data_filter\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
     }
    ],
    "source": [
